shitty hack to test input lag with lag reduction. force 73:60 option for graphics

--- a/Source/Android/app/src/main/res/values/arrays.xml
+++ b/Source/Android/app/src/main/res/values/arrays.xml
@@ -225,6 +225,7 @@
         <item>Force 16:9</item>
         <item>Force 4:3</item>
         <item>Stretch To Window</item>
+        <item>Force 73:60 (Melee)</item>
     </string-array>
     <integer-array name="aspectRatioValues" translatable="false">
         <item>0</item>
