--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/NonJailbroken/NonJailbrokenNotice.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/NonJailbroken/NonJailbrokenNotice.xib
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NonJailbrokenNoticeViewController">
             <connections>
+                <outlet property="m_ok_button" destination="jPS-qP-47c" id="XkX-k2-2o1"/>
                 <outlet property="view" destination="r55-Fn-aBI" id="r9r-Zd-Dn7"/>
             </connections>
         </placeholder>
@@ -38,24 +40,33 @@
                     <rect key="frame" x="0.0" y="247.66666666666666" width="375" height="445.33333333333337"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="90n-Az-9Cs" userLabel="Content Stack">
-                            <rect key="frame" x="20" y="0.0" width="335" height="324.33333333333331"/>
+                            <rect key="frame" x="20" y="0.0" width="335" height="344.66666666666669"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2L-KW-hUh" userLabel="Donate Text">
-                                    <rect key="frame" x="2" y="0.0" width="331.33333333333331" height="304.33333333333331"/>
-                                    <string key="text">You are using the version of DolphiniOS for non-jailbroken devices running iOS 13.5.
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2L-KW-hUh" userLabel="Disclaimer Text">
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="142.33333333333334"/>
+                                    <string key="text">You are using the version of DolphiniOS for non-jailbroken devices running iOS 13.5 and higher.
 
-Performance will be 20% to 60% slower versus the jailbroken version because of restrictions put in place by Apple.
-
-When you are finished with DolphiniOS, please go to Settings and press the "Quit" button.
-
-Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this happens, reboot your device and DolphiniOS will work again.</string>
+Performance will be 20% to 60% slower versus the jailbroken version because of restrictions put in place by Apple.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When you are finished with DolphiniOS, please go to Settings and press the &quot;Quit&quot; button." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPf-LS-heK" userLabel="Quit Text">
+                                    <rect key="frame" x="5.6666666666666572" y="162.33333333333334" width="324" height="61"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <color key="textColor" systemColor="systemRedColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPE-8Q-jMN" userLabel="Bug Text">
+                                    <rect key="frame" x="0.66666666666665719" y="243.33333333333334" width="333.66666666666674" height="81.333333333333343"/>
+                                    <string key="text">Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this happens, reboot your device and DolphiniOS will work again.</string>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-Rc-2vE">
-                                    <rect key="frame" x="47.666666666666686" y="324.33333333333337" width="240" height="0.0"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <rect key="frame" x="47.666666666666686" y="344.66666666666674" width="240" height="0.0"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" id="kge-k2-qnG"/>
                                     </constraints>
@@ -82,9 +93,9 @@ Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this 
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="np2-xh-cqO">
                                     <rect key="frame" x="20" y="20" width="335" height="45"/>
                                     <subviews>
-                                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-qP-47c">
+                                        <button opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-qP-47c">
                                             <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
-                                            <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" systemColor="linkColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="45" id="j1f-m3-E7Q"/>
                                             </constraints>
@@ -104,7 +115,7 @@ Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this 
                                     </subviews>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="np2-xh-cqO" secondAttribute="trailing" constant="20" id="JXH-sX-p11"/>
                                 <constraint firstAttribute="bottom" secondItem="np2-xh-cqO" secondAttribute="bottom" constant="20" symbolic="YES" id="QZU-m1-iIj"/>
@@ -115,7 +126,8 @@ Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this 
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="Bm9-Am-iRC"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="W3E-IV-CzC" firstAttribute="leading" secondItem="Bm9-Am-iRC" secondAttribute="leading" id="5GE-q5-pch"/>
                 <constraint firstItem="W3E-IV-CzC" firstAttribute="height" secondItem="Bm9-Am-iRC" secondAttribute="height" multiplier="1:4" id="EpQ-3r-cdM"/>
@@ -129,12 +141,20 @@ Otherwise, DolphiniOS may begin crashing on launch due to a bug in iOS. If this 
                 <constraint firstItem="o40-Qv-36o" firstAttribute="leading" secondItem="Bm9-Am-iRC" secondAttribute="leading" id="hZ3-lK-dtJ"/>
                 <constraint firstItem="uo7-Aa-Z1e" firstAttribute="leading" secondItem="Bm9-Am-iRC" secondAttribute="leading" id="yLl-4y-JII"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Bm9-Am-iRC"/>
             <point key="canvasLocation" x="-1026" y="204"/>
         </view>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
     </objects>
     <resources>
         <image name="exclamationmark_circle" width="100" height="100"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
